--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         </td>
         <td>
           <h1>Hello world!</h1>
+          <h1>Hello Bluemix First Correction!</h1>
         </td>
       </tr>
     </table>
